# FastAPI_cookbook

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose-ci.yml  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  scrap.py
.circleci/: config.yml
.github/workflows/: ci.yml
app/: celery_app.py  main.py  middleware.py  security.py
app/utils/: db.py  tests.py
auth/: constants.py  dri_scrapper.py  enums.py  models.py  routes.py  schemas.py
auth/tests/: conftest.py  test_dri_scrapper.py  test_models.py  test_profile.py  test_scurity.py  test_users.py
auth/tests/example_data/: example_users.py
auth/tests/test_data/: users.py
auth/tests/test_routes/: test_profile.py  test_users.py
config/: env.example  postgres_example  settings.py
core/: cli.py  constants.py
core/files/: file_upload_client.py
fridge/: models.py  routes.py  schemas.py  tasks.py
fridge/tests/: conftest.py  test_routes.py
fridge/tests/test_data/: example_data.py
migrations/: env.py
migrations/versions/: 08de7f994a41_added_tags.py  0f51d81aed0c_added_fridge.py  15c1fbf95356_initial_migration.py  17ef3d59234c_added_ingredient_items.py  1ae8633d956b_initial_migration.py  45016b1511cc_created_profile.py  49e0efb25571_created_fridge_models.py  4e40f5bd2f1c_added_favorites.py  5402a9eab9f2_initial_migration.py  6b0b686f3fc2_added_images.py  77f0575ff0cc_initial_migration.py  7e72dbe92283_removed_dri_model.py  948c7c8f64f7_profile_is_now_one_to_one.py  96583efeb761_added_foreign_key_relationships.py  9bd8e7c8e008_removed_enum_fields.py  a507345d73fb_removed_dri_model.py  a67c808c6647_fixed_typo.py  aefc20be794c_removed_dri_model.py  af56038e470e_removed_dri_model.py  b221abd90c96_added_dishes.py  b3a7f62d05f4_created_user_profile.py  bd73a0ad0266_fixed_typo.py  ca22444c1de5_dish_ingredient_now_optional.py  cbf9d73e39c1_fixed_typo.py  e3a081a20c22_removed_dri_model.py  ed922a71ba88_removed_dri_model.py  f1e1b4635344_added_username_field.py  f6153ccfd2fc_extended_dish_model_by_servings_and_.py  fa70c605f619_product_marked_for_delete_false_by_.py  fe36c00255c3_removed_dri_model.py
recipes/: constants.py  models.py  nutritional_data.py  routes.py  schemas.py  tasks.py
recipes/tests/: conftest.py  test_data.py  test_recipes.py
recipes/tests/test_data/: example_data.py  recipes.py
recipies/: models.py  routes.py  tasks.py  utils.py
recipies/tests/: conftest.py  test_data.py  test_recipes.py
users/: models.py  routes.py
