[project]
name = "fastapi-cookbook"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "django-environ>=0.13.0",
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]


[tool.ruff]
line-length = 110
extend-exclude = ['migrations/']

[dependency-groups]
ci = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
